[package]
name = "proof-of-context"
version = "0.2.0"
edition = "2021"
authors = ["Juan Cruz Maisu <juancmaisu@outlook.com>"]
license = "MIT OR Apache-2.0"
description = "Reference implementation of Proof-of-Context: attestation-as-settlement primitive for decentralized ML. See paper at github.com/asastuai/proof-of-context."
repository = "https://github.com/asastuai/proof-of-context-impl"
homepage = "https://github.com/asastuai/proof-of-context"
readme = "README.md"
keywords = ["verification", "ml", "cryptography", "decentralized", "settlement"]
categories = ["cryptography"]

[dependencies]
# Phase 2 primitives:
#   - sha2 for Merkle commitments over ExecutionContextRoot
#   - ed25519-dalek for commitment signing / verification
#   - thiserror for idiomatic error-type derivations
#   - serde for on-wire / on-disk (de)serialization of public types
#   - hex for human-readable hash rendering in errors and traces
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
hex = "0.4"

# Phase 3 will add: TEE-attestation backend (tdx-quote or similar),
# Drand client, block-RPC client.

[dev-dependencies]
# rand with std_rng used by the mock backend for deterministic test keys
rand = "0.8"

[profile.release]
# Defaults are fine.

[lib]
name = "proof_of_context"
path = "src/lib.rs"
