[package]
name = "proof-of-context"
version = "0.2.0"
edition = "2021"
authors = ["Juan Cruz Maisu <juancmaisu@outlook.com>"]
license = "MIT OR Apache-2.0"
description = "Reference implementation of Proof-of-Context: attestation-as-settlement primitive for decentralized ML. See paper at github.com/asastuai/proof-of-context."
repository = "https://github.com/asastuai/proof-of-context-impl"
homepage = "https://github.com/asastuai/proof-of-context"
readme = "README.md"
keywords = ["verification", "ml", "cryptography", "decentralized", "settlement"]
categories = ["cryptography"]

[features]
# Default: pure crypto + types, no HTTP deps. Suitable for embedding the types
# into protocols, indexers, verifiers that get anchors from elsewhere.
default = []

# Enable the `clients` module: real Drand + EVM block-RPC fetchers that build
# a `TripleAnchor` against live mainnet sources. Adds ureq + serde_json as
# transitive deps. Opt in only when you actually need to fetch.
real-anchors = ["dep:ureq", "dep:serde_json"]

[dependencies]
# Phase 2 primitives:
#   - sha2 for Merkle commitments over ExecutionContextRoot
#   - ed25519-dalek for commitment signing / verification
#   - thiserror for idiomatic error-type derivations
#   - serde for on-wire / on-disk (de)serialization of public types
#   - hex for human-readable hash rendering in errors and traces
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
hex = "0.4"

# Phase 3 (real anchors, opt-in):
#   - ureq is a small, sync, blocking HTTP client (no tokio runtime required)
#   - serde_json parses Drand and EVM JSON-RPC responses
ureq = { version = "2", optional = true, default-features = false, features = ["json", "tls"] }
serde_json = { version = "1", optional = true }

# Phase 4 will add: TEE-attestation backend (tdx-quote or similar). The TEE
# clock remains best-effort scaffolded until then.

[dev-dependencies]
# rand with std_rng used by the mock backend for deterministic test keys
rand = "0.8"
# JSON roundtrip in the integration test suite
serde_json = "1"

[profile.release]
# Defaults are fine.

[lib]
name = "proof_of_context"
path = "src/lib.rs"
